A quick fix on the title and artist overlapping the program bar and time.

--- a/client/src/pages/style/room.css
+++ b/client/src/pages/style/room.css
@@ -113,8 +113,6 @@ div.mobileMain {
     width: 100%;
 }
 
-div.queueueueue {}
-
 img.allTunesLogo {
     text-align: center;
     display: block;
@@ -143,7 +141,7 @@ div.switcher {
 .player-container .details-section {
     white-space: nowrap;
     position: absolute;
-    top: 25px;
+    top: 12px;
     line-height: 1px;
     cursor: default;
     text-overflow: ellipsis;
